@@ -1,3 +1,9 @@
+2008-09-30  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/36592
+	* gfortran.dg/proc_ptr_common_1.f90: New.
+	* gfortran.dg/proc_ptr_common_2.f90: New.
+
 2008-09-30  Paolo Bonzini  <bonzini@gnu.org>
 
 	* g++.dg/warn/if-empty-1.C: Copy from gcc.dg/if-empty-1.c.
